<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="25"
                android:hint="@string/hint_user_first_name"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="25"
                android:hint="@string/hint_user_last_name"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/sp_user_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="true"
            app:ms_hint="@string/hint_user_gender" />

        <TextView
            android:id="@+id/tv_error_user_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/required_field"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            android:paddingRight="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="50"
                android:hint="@string/hint_user_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_user_cell_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_cell_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="10"
                android:hint="@string/hint_user_cell_number"
                android:imeOptions="actionNext"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_user_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="25"
                android:hint="@string/hint_user_username"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_user_first_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_first_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="25"
                android:inputType="textPassword"
                android:hint="@string/hint_user_first_password"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_user_second_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_second_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="25"
                android:inputType="textPassword"
                android:hint="@string/hint_user_second_password"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_user_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:padding="12dp"
            android:text="@string/btn_user_save" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
