<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="15"
                android:hint="@string/hint_location_name"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/sp_location_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="true"
            app:ms_hint="@string/hint_location_radius" />

        <TextView
            android:id="@+id/tv_error_location_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/required_field"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            android:paddingRight="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/sp_location_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="true"
            app:ms_hint="@string/hint_location_type" />

        <TextView
            android:id="@+id/tv_error_location_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/required_field"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            android:paddingRight="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_location_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_location_start_date"
                android:drawableLeft="@drawable/ic_calendar"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorPrimaryText"
                app:ms_hintColor="@color/colorPrimaryText"
                android:inputType="none"
                android:editable="false"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_location_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorTextAppearance="@style/ErrorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_location_end_date"
                android:drawableLeft="@drawable/ic_calendar"
                android:drawableTint="@color/colorPrimaryText"
                android:drawablePadding="5dp"
                app:ms_hintColor="@color/colorPrimaryText"
                android:inputType="none"
                android:editable="false"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_location_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:maxLength="200"
                android:hint="@string/hint_location_comment"
                android:imeOptions="actionNext"
                android:lines="6"
                android:scrollbars="vertical"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_location_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:padding="12dp"
            android:text="@string/btn_location_save" />

        <Button
            android:id="@+id/btn_location_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:text="@string/btn_location_cancel" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>